[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://levels/tilemap/New Piskel.png" type="Texture" id=2]
[ext_resource path="res://enemies/Sight.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 31.6228

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 560, 140 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
MinWait = 2.75
MaxWait = 7.5
MoveSpeed = 75.0
ChaseSpeed = 125.0
SightSpeed = 0.75
MaxHealth = 2
Damage = 1

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 24, 8, 8 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Sight" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Sight"]
build_mode = 0
polygon = PoolVector2Array( -8.15601, -4.74391, -48.156, -84.7439, 51.844, -84.7439, 11.844, -4.74391 )
_sections_unfolded = [ "Transform", "shape" ]

[node name="Tween" type="Tween" parent="Sight"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="PatrolArea" type="Node" parent="."]
editor/display_folded = true

[node name="TopLeft" type="Position2D" parent="PatrolArea"]
position = Vector2( 490, 100 )
_sections_unfolded = [ "Transform" ]

[node name="TopRight" type="Position2D" parent="PatrolArea"]
position = Vector2( 610, 100 )
_sections_unfolded = [ "Transform" ]

[node name="Bottom" type="Position2D" parent="PatrolArea"]
position = Vector2( 560, 150 )
_sections_unfolded = [ "Transform" ]

[node name="BodySpace" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodySpace"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Sight" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_completed" from="Sight/Tween" to="Sight" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="BodySpace" to="." method="_on_BodySpace_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
